install/echodemo/echo.yaml
# echo app 

apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: echo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
      - name: echo
        image: zhangzj/echo:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      containers:
      - name: echo
        image: zhangzj/echo:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
